--- a/xanadu_sphinx_theme/layout.html
+++ b/xanadu_sphinx_theme/layout.html
@@ -100,6 +100,14 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
         gtag('config', '{{ theme_google_analytics_tracking_id }}');
+        
+        function sendCustomGAEvent(eventName, eventCategory, eventLabel, value) {
+          gtag('event', eventName, {
+            'event_category': eventCategory,
+            'event_label': eventLabel,
+            'value': value
+          });
+        }
       </script>
     {%- endif %}
   {%- endblock %}
