--- a/xanadu_sphinx_theme/localtoc.html
+++ b/xanadu_sphinx_theme/localtoc.html
@@ -6,13 +6,13 @@
       <!-- Generate the HTML for the toctree with a maximum depth of 3, collapsed, and including hidden items -->
       {% set toc_html = toctree(maxdepth=3, collapse=True, includehidden=True) %}
       <!-- If a subset of the ToC should be shown, and the generated ToC is not empty and contains level 2 items -->
-      {% if theme_toc_subset and toc_html.strip() %}
+      {% if theme_toc_subset and toc_html.strip() and 'class="current"' in toc_html %}
         <h3>Contents</h3>
         <!-- Display the ToC for a subset of the current document tree. -->
         {{ toctree(maxdepth=3, collapse=True, includehidden=True) }}
       {% else %}
         <!-- This checks if the 'toc' (table of contents) variable exists and is not just whitespace. If so, the local table of contents will be displayed below. -->
-        {% if toc and toc.strip() %}
+        {% if toc and toc.strip() and 'class="current"' in toc %}
         <h3>Contents</h3>
           {{ toc }}
         {% endif %}
